[FEAT/#129] 코드 리뷰 반영 - .gitignore 수정 - seed 실행 안정화 - 에러 핸들링 추가 - getLast()로 변경